[package]
name = "hibp"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["CKingX"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.10", features = ["derive"] }
log = "0.4.*"
env_logger = "0.9.*"
ureq = {version = "2.4.0", features = ["brotli"]}
rpassword = "6.0.1"
sha1 = "0.10.1"
colored = "2.*"
num-format = "0.4.0"
rayon = "1.5.3"
indicatif = "0.16.2"
crossbeam-channel = "0.5.4"

[profile.release]
overflow-checks = true
lto = "thin"