[package]
name = "haveibeenpwned"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["CKingX"]
keywords = ["haveibeenpwned", "password", "hibp"]
readme = "README.md"
homepage = "https://github.com/CKingX/haveibeenpwned"
repository = "https://github.com/CKingX/haveibeenpwned"
description = "haveibeenpwned is a command-line application that uses HaveIBeenPwned service and can create and use Binary Fuse filter for efficient query at cost of false positives."
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.10", features = ["derive"] }
ureq = {version = "2.4.0", features = ["brotli"]}
rpassword = "6.0.1"
sha1 = "0.10.1"
colored = "2.*"
num-format = "0.4.0"
rayon = "1.5.3"
indicatif = "0.16.2"
crossbeam-channel = "0.5.4"
xorf = {version = "0.8.0", features = ["serde"]}
siphasher = "0.3.*"
serde = "1.0.*"
bincode = "1.3.3"
directories = "2.0.2"
bitvec = {version = "1.0.0", features = ["serde"]}
update-informer = "0.5.0"

[profile.release]
overflow-checks = true
lto = "thin"
strip = true

[features]
winfilter = []
linuxfilter = []

[package.metadata.deb]
features = ["linuxfilter"]
extended-description = "haveibeenpwned is a command-line application that uses HaveIBeenPwned service and can create and use Binary Fuse filters (smaller and faster than Bloom and Cuckoo filters at the same false positivity rate) for efficient query at cost of false positives."
assets = [
    ["../small.bin", "/usr/share/haveibeenpwned/filter.bin", "644"],
    ["target/release/haveibeenpwned", "/usr/bin/", "755"],
    ["README.md", "/usr/share/doc/haveibeenpwned/README.md", "644"],
]